# Learning_C

./: CMakeLists.txt  README.md
0x01-variables_if_else_while/: 0-positive_or_negative.c  0-positive_or_negative.cpp  1-last_digit.c  1-last_digit.cpp  100-print_comb3.c  100-print_comb3.cpp  101-print_comb4.c  101-print_comb4.cpp  102-print_comb5.c  102-print_comb5.cpp  2-print_alphabet.c  2-print_alphabet.cpp  3-print_alphabets.c  3-print_alphabets.cpp  4-print_alphabt.c  4-print_alphabt.cpp  5-print_numbers.c  5-print_numbers.cpp  6-print_numberz.c  6-print_numberz.cpp  7-print_tebahpla.c  7-print_tebahpla.cpp  8-print_base16.c  8-print_base16.cpp  9-print_comb.c  9-print_comb.cpp
0x02-functions_nested_loops/: 0-putchar.c  100-times_table.c  101-natural.c  102-fibonacci.c  103-fibonacci.c  104-fibonacci.c  11-print_to_98.c  2-print_alphabet_x10.c  3-islower.c  5-sign.c  7-print_last_digit.c  8-24_hours.c  9-times_table.c  main.h
0x03-more_functions_nested_loops/: 1-isdigit.c  10-print_triangle.c  100-prime_factor.c  101-print_number.c  2-mul.c  3-print_numbers.c  4-print_most_numbers.c  5-more_numbers.c  6-print_line.c  7-print_diagonal.c  8-print_square.c  9-fizz_buzz.c  main.h
0x04-pointers_arrays_strings/: 0-reset_to_98.c  1-swap.c  101-keygen.c  5-rev_string.c  6-puts2.c  7-puts_half.c  8-print_array.c  9-strcpy.c  main.h  tempCodeRunnerFile.c
0x05-pointers_arrays_strings/: 100-rot13.c  101-print_number.c  102-magic.c  103-infinite_add.c  104-print_buffer.c  2-strncpy.c  3-strcmp.c  4-rev_array.c  5-string_toupper.c  6-cap_string.c  7-leet.c  main.h
0x06-pointers_arrays_strings/: 0-memset.c  1-memcpy.c  100-set_string.c  2-strchr.c  4-strpbrk.c  5-strstr.c  7-print_chessboard.c  8-print_diagsums.c
0x07-recursion/: 0-puts_recursion.c  1-print_rev_recursion.c  100-is_palindrome.c  101-wildcmp.c  2-strlen_recursion.c  3-factorial.c  4-pow_recursion.c  5-sqrt_recursion.c  6-is_prime_number.c
0x08-static_libraries/: 0-isupper.c  0-strcat.c  1-strncat.c  100-atoi.c  2-strlen.c  3-puts.c  3-strspn.c  4-isalpha.c  6-abs.c
0x09-argc_argv/: 0-whatsmyname.c  1-args.c  100-change.c  2-args.c  3-mul.c  4-add.c  main.h
0x0A-malloc_free/: 0-create_array.c  1-strdup.c  100-argstostr.c  101-strtow.c  2-str_concat.c  3-alloc_grid.c  4-free_grid.c  main.h
0x0B-more_malloc_free/: 0-malloc_checked.c  1-string_nconcat.c  100-realloc.c  101-mul.c  2-calloc.c  3-array_range.c
0x0C-preprocessor/: 2-main.c  3-function_like_macro.h
0x0D-structures_typedef/: 1-init_dog.c  2-print_dog.c  4-new_dog.c  5-free_dog.c  dog.h
0x0E-function_pointers/: 0-print_name.c  1-array_iterator.c  2-int_index.c  3-get_op_func.c  3-main.c  3-op_functions.c  README.md  function_pointers.h
0x10-variadic_functions/: 0-sum_them_all.c  1-print_numbers.c  2-print_strings.c  3-print_all.c
0x11-singly_linked_lists/: 0-print_list.c  1-list_len.c  100-first.c  101-hello_alx.asm  2-add_node.c  3-add_node_end.c  4-free_list.c  README.md  lists.h
0x12-more_singly_linked_lists/: 0-main.c  0-print_listint.c  1-listint_len.c  1-main.c  10-delete_nodeint.c  100-reverse_listint.c  101-print_listint_safe.c  102-free_listint_safe.c  103-find_loop.c  2-add_nodeint.c  3-add_nodeint_end.c  4-free_listint.c  5-free_listint2.c  6-pop_listint.c  7-get_nodeint.c  8-sum_listint.c  9-insert_nodeint.c
0x13-doubly_linked_lists/: 0-main.c  0-print_dlistint.c  1-dlistint_len.c  1-main.c  2-add_dnodeint.c  3-add_dnodeint_end.c  4-free_dlistint.c  5-get_dnodeint.c  6-sum_dlistint.c  7-insert_dnodeint.c  8-delete_dnodeint.c
